#36 Add GET endpoint and test case
