# backend/src/modules/match-module/presentation/rest-api/response/MatchDto.ts
@@ -1,0 +1,11 @@
+export class MatchDto {
+  readonly matchId: string;
+  readonly firstMatchSideId: string;
+  readonly secondMatchSideId: string;
+
+  constructor(props: { matchId: string; firstMatchSideId: string; secondMatchSideId: string }) {
+    this.matchId = props.matchId;
+    this.firstMatchSideId = props.firstMatchSideId;
+    this.secondMatchSideId = props.secondMatchSideId;
+  }
+}
