# backend/src/rest-api-docs.yaml
@@ -18,6 +18,27 @@ tags:
   - name: Specification
     description: The Open API specification
 paths:
+  /matches/{matchId}:
+    get:
+      tags:
+        - Match
+      description: Fetch match with given id
+      parameters:
+        - name: matchId
+          in: path
+          description: Match Id
+          required: true
+          schema:
+            type: string
+            format: uuid
+            example: 2480fc2c-bbd7-427c-9439-02f76583aef5
+      responses:
+        200:
+          description: Match with given id
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/MatchDto'
   /matches:
     post:
       tags:
@@ -350,6 +371,23 @@ components:
         - tournamentId
         - firstMatchSideId
         - secondMatchSideId
-
+    MatchDto:
+      type: object
+      properties:
+        matchId:
+          description: Identifier of the match that is supposed to start
+          type: string
+          format: uuid
+          example: 2480fc2c-bbd7-427c-9439-02f76583aef5
+        firstMatchSideId:
+          description: Identifier of the match first team
+          type: string
+          format: uuid
+          example: 3510fc2c-bbd7-427c-9439-02f76583aef5
+        secondMatchSideId:
+          description: Identifier of the match second team
+          type: string
+          format: uuid
+          example: 8321fc2c-bbd7-427c-9439-02f76583aef7
 
 
